--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mukul — Wild Portfolio (Standalone)</title>
+  <title>Mukul</title>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -181,7 +181,6 @@
           tech: ["Python", "React", "FastAPI", "OR-Tools"],
           color: "from-purple-500 to-pink-500",
           desc: "Real-time settlement engine with minimal-transaction optimization",
-          icon: "🚄"
         },
         {
           title: "TravelSplit",
@@ -189,7 +188,6 @@
           tech: ["React", "TypeScript", "Node.js", "PostgreSQL"],
           color: "from-orange-500 to-red-500",
           desc: "Minimal-transaction settlement with full-stack type safety & optimistic UI",
-          icon: "💸"
         },
         {
           title: "Earth-Track",
@@ -197,7 +195,6 @@
           tech: ["React", "TypeScript", "OpenAI"],
           color: "from-green-500 to-teal-500",
           desc: "Gamified carbon tracking with AI EcoTutor",
-          icon: "🌍"
         },
         {
           title: "RBAC System",
@@ -205,7 +202,6 @@
           tech: ["NestJS", "MongoDB", "AWS"],
           color: "from-blue-500 to-cyan-500",
           desc: "Production-grade auth with MFA & OAuth2",
-          icon: "🔐"
         }
       ];
 
